--- a/vignettes/errors.Rmd
+++ b/vignettes/errors.Rmd
@@ -466,7 +466,23 @@ Example:
 a <- interpolate(at, ay, "wiggly")
 ```
 
-Invalid data for interpolation.  Both the `time` (first) and `value`
+# `E1037`
+
+Calls to interpolate must be assigned to a symbol, because they affect the **whole** structure.  This is academic until we support interpolation of several series at the same time, but rather than writing:
+
+```
+a[] <- interpolate(at, ay, "linear")
+dim(x) <- 10
+```
+
+we expect to see
+
+```
+a <- interpolate(a, y, "linear")
+dim(x) <- 10
+```
+
+This is similar to the requirement that array-valued parameters are assigned at once (in contrast to odin version 1).
 
 # `E2001`
 
