--- a/vignettes/errors.Rmd
+++ b/vignettes/errors.Rmd
@@ -472,7 +472,7 @@ Calls to interpolate must be assigned to a symbol, because they affect the **who
 
 ```
 a[] <- interpolate(at, ay, "linear")
-dim(x) <- 10
+dim(a) <- 10
 ```
 
 we expect to see
