--- a/vignettes/errors.Rmd
+++ b/vignettes/errors.Rmd
@@ -484,6 +484,40 @@ dim(a) <- 10
 
 This is similar to the requirement that array-valued parameters are assigned at once (in contrast to odin version 1).
 
+# `E1038`
+
+This equation cannot reference itself.  There are some types of equations that **can** reference themselves, for example:
+
+```
+update(x) <- x + 1         # references 'x' from the previous step
+deriv(x) <- x              # derivative referencing the actual variable
+x[2:n] <- x[i] / x[i - 1]  # referencing elsewhere in the array
+```
+
+However, in general this makes little sense and is disallowed, for example:
+
+```
+b <- b + 1
+```
+
+This is not allowed because we have a cycle in the graph for `b` (a special case of [E2005](#e2005)).
+
+# `E1039`
+
+Array extent cannot be stochastic.  This is really a special case of [E2011](#e2011) but detectable in a single expression.  An example that would throw this error is:
+
+```
+dim(a) <- Poisson(2)
+```
+
+# `E1040`
+
+Array extent cannot be determined by time.  This is really a special case of [E2011](#e2011) but detectable in a single expression.  An example that would throw this error is:
+
+```
+dim(a) <- if (time > 10) 100 else 20
+```
+
 # `E2001`
 
 Your system of equations does not include any expressions with `initial()` on the lhs.  This is what we derive the set of variables from, so at least one must be present.
@@ -587,3 +621,23 @@ d <- data()
 ```
 
 Here, `d` defines some data, and we try to use it from `update()` but we just can't do that.
+
+# `E2011`
+
+Array extents must be determined at system creation.  This means that they cannot be changed when setting parameters into the model, or by time.
+
+An example that would throw this error:
+
+```
+dim(a) <- n
+n <- parameter(type = "integer")
+```
+
+Here, parameter is not constant (it can be updated); you can fix this by writing this as:
+
+```
+dim(a) <- n
+n <- parameter(type = "integer", constant = TRUE)
+```
+
+Similarly, if `n` depended on `time`, or if it was (or depended on) anything stochastic, this would be an error because then the array dimension would have to change every time step.
