--- a/vignettes/errors.Rmd
+++ b/vignettes/errors.Rmd
@@ -536,6 +536,72 @@ Array extent cannot be determined by time.  This is really a special case of [E2
 dim(a) <- if (time > 10) 100 else 20
 ```
 
+# `E1041`
+
+Special functions on the right-hand-side of an expression must be the only expression there.  This applies to `parameter()`, `interpolate()` and `data()`; if these are used they must be the **only** expression on the right hand side.
+
+For example you cannot write:
+
+```
+x <- interpolate(at, ay) + interpolate(bt, by)
+```
+
+You might write this as:
+
+```
+a <- interpolate(at, ay)
+b <- interpolate(bt, by)
+x <- a + b
+```
+
+# `E1042`
+
+Invalid special function used on the right hand side.  Some odin functions can only be used on the lhs; this include `initial`, `update` and `deriv`.  So you cannot write this:
+
+```
+a <- x + deriv(y)
+```
+
+# `E1043`
+
+Invalid functions used in expression for `dim()`.  Currently `dim()` is quite limited in what it can accept (though slightly more relaxed than `odin1`).  You can use `+`, `-`, `(`, `length`, `nrow` and `ncol` but nothing else.  Let us know if you think you should be able to use more.
+
+# `E1044`
+
+Attempt to call something which is not the **name** of a function.  This might be
+
+```
+a <- 1(x)
+```
+
+where `1` is not a symbol, so this fails.  Other possible errors, which are valid R code but not valid odin code, might include:
+
+```
+a <- f(x)(y)
+```
+
+where `f(x)` might return a function in R, but this is not possible in odin.
+
+# `E1045`
+
+Attempt to use one of R's reserved words: `function`, `while`, `repeat`, `for`, etc.
+
+# `E1046`
+
+All `if` statements must have an `else` clause.  You cannot write:
+
+```
+a <- if (condition) 1
+```
+
+as this is really the same as (in R)
+
+```
+a <- if (condition) 1 else NULL
+```
+
+which would not be valid in R.  Always provide an `else` branch.
+
 # `E2001`
 
 Your system of equations does not include any expressions with `initial()` on the lhs.  This is what we derive the set of variables from, so at least one must be present.
@@ -692,3 +758,15 @@ a[2] <- b
 ```
 
 Because the assignment to `b` occurs within the block of assignments to `a[]`.  When we evaluate the expressions, all of the assignments to `a` will happen in one go (in the order written) and if you interleave them it gives the false idea of controlling the flow of equations more than you really can.
+
+# `E2014`
+
+An equation has a name that shadows a variable.  You may have written something like:
+
+```
+initial(a) <- 1
+update(a) <- a + 1
+a <- 2
+```
+
+which is invalid because `a` is both an ordinary equation and also part of the system state.
