--- a/vignettes/migrating.Rmd
+++ b/vignettes/migrating.Rmd
@@ -224,3 +224,29 @@ The relationship between packages has changed.  Previously `mcstate` "knew" abou
 ## Much slower compilation time
 
 Because we now compile to C++ via `dust2`, the compilation times have massively increased.  Previously, compilation of a simple model took less than a second, but now this will take 6 seconds or so.  You can alleviate this to a degree during development by specifying `debug = TRUE` when compiling, which reduces this down to about 3 seconds.  These times are from my workstation but I expect the relative differences to hold (we're probably 10x slower than previously but can be "only" 5x slower if you turn off optimisation).  If you were previously using `odin.dust` you should notice little change here.
+
+# Updating old code
+
+If you compile odin code that contains any of the changes above, it will try and update the code to the new version and keep going:
+
+```{r}
+gen <- odin2::odin({
+  initial(x) <- 1
+  deriv(x) <- x + a / t
+  a <- user(2)
+}, quiet = TRUE, debug = TRUE)
+```
+
+This model contains two issues that can be easily rewritten; the solution to this rewriting is printed to screen and the compilation would as if you had rewritten them.
+
+Not everything can be rewritten, especially changes involving `step`:
+
+```{r, error = TRUE, purl = FALSE}
+gen <- odin2::odin({
+  initial(x) <- 1
+  update(x) <- x + a / step
+  a <- user(2)
+}, quiet = TRUE, debug = TRUE)
+```
+
+In this case, odin errors and tries to indicate where you have work to do (and directs you to this document!)
