--- a/vignettes/migrating.Rmd
+++ b/vignettes/migrating.Rmd
@@ -15,7 +15,11 @@ knitr::opts_chunk$set(
 source("helpers.R")
 ```
 
-This vignette discusses key differences with odin version 1 (`odin1` in this document).
+This vignette discusses key differences with odin version 1.
+
+```{r}
+library(odin2)
+```
 
 # New features
 
