--- a/vignettes/errors.Rmd
+++ b/vignettes/errors.Rmd
@@ -671,6 +671,37 @@ a <- parameter(c(1, 2, 3))
 
 to have a default value of vector of 1:3; however this is quite hard to validate and generalises poorly to higher dimensions.  Your thoughts and use-cases are very welcome.
 
+# `E1991`
+
+Invalid use of `rank` argument to `parameter()` call that does not assign to dimensions.  You might have written
+
+```
+a <- parameter(rank = 2)
+```
+
+but this is not the place to include the `rank` argument.  Instead, it should go onto the call with `dim(a)` on the left-hand-side.
+
+
+# `E1992`
+
+Missing `rank` argument to call to `parameter()` which assigns to `dim()`.  You may have written
+
+```
+dim(a) <- parameter()
+```
+
+but here we need to know what rank `a` is (is it a vector, matrix, etc).  You can fix this by writing
+
+```
+dim(a) <- parameter(rank = 2)
+```
+
+with the value of the `rank` argument being a literal integer.  See `vignette("functions")` for more information on this interface.
+
+# `E1993`
+
+Invalid value for `rank` argument to `parameter()`.  Where given it must be a positive size; literally an integer value of 1, 2, 3, ..., 8.  You cannot use a variable here.
+
 # `E2001`
 
 Your system of equations does not include any expressions with `initial()` on the lhs.  This is what we derive the set of variables from, so at least one must be present.
