--- a/vignettes/errors.Rmd
+++ b/vignettes/errors.Rmd
@@ -113,7 +113,7 @@ This is an error because [`new` is a keyword in C++](https://en.cppreference.com
 
 # `E1005`
 
-Invalid target on lhs of assignment.
+Invalid target on lhs of assignment.  There are quite a few ways of being an invalid assignment target, and at present they are all grouped within this error.    We may split these into different errors in future where particular types of error are both common and difficult to understand.
 
 Examples:
 
@@ -121,7 +121,7 @@ Examples:
 1 <- 10
 ```
 
-The code above is valid R (as in, it can be parsed) but it is nonsensical.  At present the lhs of an assignment must be a symbol (e.g., `a <- 1`).  In future versions we will support assignments into arrays (e.g., `a[] <- 1`) but this is not yet implemented.
+The code above is valid R (as in, it can be parsed) but it is nonsensical.  Generally, the lhs of an assignment must be a symbol (e.g., `a <- 1`).
 
 This code is also reported if you have a spelling mistake, such as
 
@@ -129,7 +129,9 @@ This code is also reported if you have a spelling mistake, such as
 inital(x) <- 1
 ```
 
-instead of `initial(x)`. It is also reported with this code, which contains two legacy errors.
+instead of `initial(x)`, though we will try and suggest the appropriate function if you have a near miss.
+
+It is also reported with this code, which contains two legacy errors.
 ```
 
 compare(d) <- Normal(0, 1)
