--- a/vignettes/migrating.Rmd
+++ b/vignettes/migrating.Rmd
@@ -33,6 +33,7 @@ Some of these features were present in versions of `odin.dust` and many derive f
 * Run multiple copies of a system at once in parallel (introduced in `odin.dust`)
 * Built-in support for periodic variable resetting (e.g., for computing daily incidence)
 * Better (we hope) error messages
+* Better debugging tools (see `vignette("debugging")`)
 
 ## Planned
 
@@ -41,7 +42,6 @@ Some of these features were present in versions of `odin.dust` and many derive f
 ## Hoped
 
 * Support for multinomial samples and other vector-valued functions
-* Better debugging tools
 
 # Missing features
 
@@ -49,7 +49,6 @@ This list is incomplete, and we'll expand it as we work through the tests.  We'r
 
 Things we do plan on implementing:
 
-* Interpolation with array output
 * Non-variable output from ODEs with `output()` (`mrc-5497`)
 * Delay differential equations, e.g. `y_lag <- delay(y, tau)` (`mrc-5434`)
 * Compile-time parameter substitution (`mrc-5575`)
